--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,154 +1,77 @@
-name: Build pcsx_rearmed libretro core for GKD pixel
+# 工作流名称
+name: Build pcsx_rearmed for GCW0 (mipsel)
 
+# 触发条件：手动触发、push/main分支推送、pull request
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 手动触发
   push:
     branches: [ main ]
-    paths-ignore: [ '**.md', 'LICENSE' ]
   pull_request:
     branches: [ main ]
 
+# 运行环境
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout base tools
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
+      # 步骤1：设置Ubuntu环境，安装必要依赖（wget、tar等）
       - name: Install system dependencies
         run: |
-          sudo apt update && sudo apt install -y \
-            wget tar make gcc g++ unzip pkg-config git patch
+          sudo apt update && sudo apt install -y wget tar make gcc git
 
-      - name: Download and extract GKD pixel toolchain
+      # 步骤2：下载并配置指定的工具链
+      - name: Download and setup GCW0 toolchain
         run: |
-          mkdir -p ~/toolchain
-          wget -q https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz -O ~/toolchain/toolchain.tar.gz
-          tar -xf ~/toolchain/toolchain.tar.gz -C ~/toolchain --strip-components=1
-          # 验证工具链sysroot
-          SYSROOT=$(~/toolchain/bin/mipsel-gcw0-linux-uclibc-gcc -print-sysroot)
-          echo "SYSROOT=$SYSROOT" >> $GITHUB_ENV
-          if [ ! -d $SYSROOT/usr/include ]; then
-            echo "❌ Toolchain sysroot missing!"
-            exit 1
-          fi
-
-      - name: Configure cross-compile environment
-        run: |
-          # 添加工具链到PATH
-          echo "$HOME/toolchain/bin" >> $GITHUB_PATH
-          # 统一C/C++编译参数
-          COMMON_FLAGS="-mips32r2 -mtune=mips32r2 -mhard-float -ffast-math -O2 -fPIC \
-            -I$HOME/pcsx_rearmed \
-            -I$HOME/pcsx_rearmed/libpcsxcore \
-            -I${{ env.SYSROOT }}/usr/include \
-            -DMAXPATHLEN=4096 \
-            -DCALLBACK= \
-            -D__unix__=1"
-          echo "CFLAGS=$COMMON_FLAGS" >> $GITHUB_ENV
-          echo "CXXFLAGS=$COMMON_FLAGS" >> $GITHUB_ENV
-          echo "LDFLAGS=-L${{ env.SYSROOT }}/usr/lib -L$HOME/toolchain/lib -lm -lpthread -ldl -fPIC -shared" >> $GITHUB_ENV
-
-      - name: Clone pcsx_rearmed source code and fix all struct issues
-        run: |
-          git clone --depth 1 https://github.com/libretro/pcsx_rearmed.git ~/pcsx_rearmed
-          cd ~/pcsx_rearmed
+          # 创建/opt目录（确保存在），下载工具链压缩包
+          sudo mkdir -p /opt
+          wget https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz -O /tmp/toolchain.tar.gz
           
-          # ========== 修复1：精简config.h ==========
-          cat > config.h << 'EOF'
-          #define PACKAGE_VERSION "1.0"
-          #define HAVE_STDINT_H 1
-          #define HAVE_INTTYPES_H 1
-          #define HAVE_STRUCT_TIMESPEC 1
-          #define HAVE_PTHREAD_H 1
-          #define HAVE_DLFCN_H 1
-          #define HAVE_SYS_PARAM_H 1
-          #define DYNAREC "lightrec"
-          #define BUILTIN_GPU "peops"
-          #define __LIBRETRO__ 1
-          #undef USE_SDL
-          #undef USE_ALSA
-          #undef USE_PULSEAUDIO
-          #define ARCH_MIPS 1
-          #define MAXPATHLEN 4096
-          #define CALLBACK /* Linux下调用约定为空 */
-          EOF
+          # 解压到/opt目录（需要sudo权限）
+          sudo tar zxvf /tmp/toolchain.tar.gz -C /opt/
+          
+          # 重命名工具链目录（保持和手动操作一致）
+          sudo mv /opt/mipsel-gcw0-linux-uclibc_sdk-buildroot /opt/gcw0-toolchain
+          
+          # 执行relocate-sdk.sh（修复路径）
+          cd /opt/gcw0-toolchain
+          sudo chmod +x relocate-sdk.sh
+          sudo ./relocate-sdk.sh
+          
+          # 修改工具链目录权限，避免后续编译权限问题
+          sudo chown -R $USER:$USER /opt/gcw0-toolchain
 
-          # ========== 修复2：修正psemu_plugin_defs.h（匹配xa_decode结构体） ==========
-          cat > libpcsxcore/psemu_plugin_defs.h << 'EOF'
-          #ifndef PSEMU_PLUGIN_DEFS_H
-          #define PSEMU_PLUGIN_DEFS_H
-
-          #include <stdint.h>
-          #define CALLBACK
-          #define PSX_PLUGIN_API_VERSION 1
-
-          // 提前声明SPUFreeze结构体
-          struct SPUFreeze {
-              int dummy;
-          };
-
-          // 修正：匹配decode_xa.h中的struct xa_decode定义（补充nsamples成员）
-          typedef struct xa_decode {
-              int nsamples; // 源码中实际访问的成员
-              int dummy;    // 其他字段用dummy填充
-          } xa_decode_t;
-
-          // 仅声明缺失的结构体
-          typedef struct {
-              int dummy;
-          } PadDataS;
-
-          // 仅声明缺失的函数原型
-          void CALLBACK SPUirq(int cycles_after);
-          void CALLBACK SPUschedule(unsigned int cycles_after);
-          long PAD1_readPort(PadDataS *);
-          long PAD2_readPort(PadDataS *);
-
-          #endif // PSEMU_PLUGIN_DEFS_H
-          EOF
-
-          # ========== 修复3：给cdriso.c添加<stdio.h> ==========
-          sed -i '1i #include <stdio.h>' libpcsxcore/cdriso.c
-
-          # ========== 修复4：创建空的arm_features.h ==========
-          touch libpcsxcore/arm_features.h
-
-          # ========== 验证修复 ==========
-          echo "✅ All fix files created:"
-          grep -c "nsamples" libpcsxcore/psemu_plugin_defs.h
-          grep -c "struct xa_decode" libpcsxcore/psemu_plugin_defs.h
-
-      - name: Build pcsx_rearmed libretro core
+      # 步骤3：配置环境变量（对应手动修改.bashrc的内容）
+      - name: Set environment variables
         run: |
-          cd ~/pcsx_rearmed
-          # 单线程编译
-          make -f Makefile.libretro \
-            CC=${{ env.CROSS }}gcc \
-            CXX=${{ env.CROSS }}g++ \
-            AR=${{ env.CROSS }}ar \
-            RANLIB=${{ env.CROSS }}ranlib \
-            CFLAGS="${{ env.CFLAGS }}" \
-            CXXFLAGS="${{ env.CXXFLAGS }}" \
-            LDFLAGS="${{ env.LDFLAGS }}" \
-            PLATFORM=unix \
-            ARCH=mips \
-            -j1
-          # 验证产物
-          if [ -f pcsx_rearmed_libretro.so ]; then
-            echo "✅ Build success! Final core info:"
-            file pcsx_rearmed_libretro.so
-            du -h pcsx_rearmed_libretro.so
-          else
-            echo "❌ Build failed! No core file generated."
-            exit 1
-          fi
+          echo "CROSS_COMPILE=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-" >> $GITHUB_ENV
+          echo "SYSROOT=/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot" >> $GITHUB_ENV
+          echo "CC=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-gcc" >> $GITHUB_ENV
+          echo "CXX=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-g++" >> $GITHUB_ENV
+          echo "AR=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-ar" >> $GITHUB_ENV
+          echo "LD=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-ld" >> $GITHUB_ENV
+          # 设置编译FLAGS
+          echo "CFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
+          echo "CXXFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
 
+      # 步骤4：检出pcsx_rearmed源码（替换为你实际的仓库地址）
+      - name: Checkout pcsx_rearmed source code
+        uses: actions/checkout@v4
+        with:
+          repository: libretro/pcsx_rearmed  # 默认使用libretro官方仓库，可替换为你的fork
+          path: pcsx_rearmed
+          fetch-depth: 1
+
+      # 步骤5：编译pcsx_rearmed核心（适配libretro核心编译方式）
+      - name: Build pcsx_rearmed core
+        run: |
+          cd pcsx_rearmed
+          # 执行编译（Makefile.libretro是pcsx_rearmed的libretro核心编译文件）
+          make -f Makefile.libretro CROSS_COMPILE=${{ env.CROSS_COMPILE }} CC=${{ env.CC }} CXX=${{ env.CXX }} AR=${{ env.AR }} LD=${{ env.LD }} CFLAGS="${{ env.CFLAGS }}" CXXFLAGS="${{ env.CXXFLAGS }}"
+
+      # 步骤6：上传编译产物（方便下载）
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pcsx_rearmed-gkd-pixel
-          path: ~/pcsx_rearmed/pcsx_rearmed_libretro.so
-          retention-days: 30
+          name: pcsx_rearmed-gcw0-core
+          path: pcsx_rearmed/pcsx_rearmed_libretro.so  # 编译后的核心文件路径
+          retention-days: 30  # 产物保留30天
