--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -1,46 +1,31 @@
-# 工作流名称
 name: Build pcsx_rearmed for GCW0 (mipsel)
 
-# 触发条件：手动触发、push/main分支推送、pull request
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-# 运行环境
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 步骤1：设置Ubuntu环境，安装必要依赖（wget、tar等）
       - name: Install system dependencies
         run: |
-          sudo apt update && sudo apt install -y wget tar make gcc git
+          sudo apt update && sudo apt install -y wget tar make gcc git autoconf automake libtool pkg-config
 
-      # 步骤2：下载并配置指定的工具链
       - name: Download and setup GCW0 toolchain
         run: |
-          # 创建/opt目录（确保存在），下载工具链压缩包
           sudo mkdir -p /opt
           wget https://github.com/game-de-it/GKD_pixel/releases/download/GKDpixel-toolchain-v1/mipsel-gcw0-linux-uclibc_sdk-buildroot.tar.gz -O /tmp/toolchain.tar.gz
-          
-          # 解压到/opt目录（需要sudo权限）
           sudo tar zxvf /tmp/toolchain.tar.gz -C /opt/
-          
-          # 重命名工具链目录（保持和手动操作一致）
           sudo mv /opt/mipsel-gcw0-linux-uclibc_sdk-buildroot /opt/gcw0-toolchain
-          
-          # 执行relocate-sdk.sh（修复路径）
           cd /opt/gcw0-toolchain
           sudo chmod +x relocate-sdk.sh
           sudo ./relocate-sdk.sh
-          
-          # 修改工具链目录权限，避免后续编译权限问题
           sudo chown -R $USER:$USER /opt/gcw0-toolchain
 
-      # 步骤3：配置环境变量（对应手动修改.bashrc的内容）
       - name: Set environment variables
         run: |
           echo "CROSS_COMPILE=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-" >> $GITHUB_ENV
@@ -49,29 +34,59 @@ jobs:
           echo "CXX=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-g++" >> $GITHUB_ENV
           echo "AR=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-ar" >> $GITHUB_ENV
           echo "LD=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-ld" >> $GITHUB_ENV
-          # 设置编译FLAGS
-          echo "CFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
-          echo "CXXFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections" >> $GITHUB_ENV
+          echo "CFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections --sysroot=${{ env.SYSROOT }}" >> $GITHUB_ENV
+          echo "CXXFLAGS=-ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections --sysroot=${{ env.SYSROOT }}" >> $GITHUB_ENV
+          # 新增：导出工具链PATH，确保辅助工具能被找到
+          echo "/opt/gcw0-toolchain/usr/bin" >> $GITHUB_PATH
 
-      # 步骤4：检出pcsx_rearmed源码（替换为你实际的仓库地址）
       - name: Checkout pcsx_rearmed source code
         uses: actions/checkout@v4
         with:
-          repository: libretro/pcsx_rearmed  # 默认使用libretro官方仓库，可替换为你的fork
+          repository: libretro/pcsx_rearmed  # 替换为你的仓库
           path: pcsx_rearmed
           fetch-depth: 1
 
-      # 步骤5：编译pcsx_rearmed核心（适配libretro核心编译方式）
-      - name: Build pcsx_rearmed core
+      - name: Generate config.h (关键修复步骤)
         run: |
           cd pcsx_rearmed
-          # 执行编译（Makefile.libretro是pcsx_rearmed的libretro核心编译文件）
-          make -f Makefile.libretro CROSS_COMPILE=${{ env.CROSS_COMPILE }} CC=${{ env.CC }} CXX=${{ env.CXX }} AR=${{ env.AR }} LD=${{ env.LD }} CFLAGS="${{ env.CFLAGS }}" CXXFLAGS="${{ env.CXXFLAGS }}"
+          # 步骤1：生成configure脚本（如果缺失）
+          if [ ! -f configure ]; then
+            ./autogen.sh
+          fi
+          # 步骤2：运行configure生成config.h，适配GCW0/mipsel平台
+          ./configure \
+            --host=mipsel-gcw0-linux-uclibc \
+            --prefix=/usr \
+            --sysconfdir=/etc \
+            --disable-sdl \
+            --disable-alsa \
+            --enable-libretro \
+            CC=${{ env.CC }} \
+            CXX=${{ env.CXX }} \
+            CFLAGS="${{ env.CFLAGS }}" \
+            CXXFLAGS="${{ env.CXXFLAGS }}"
 
-      # 步骤6：上传编译产物（方便下载）
+      - name: Build pcsx_rearmed core (适配GCW0)
+        run: |
+          cd pcsx_rearmed
+          # 清理旧编译产物，避免冲突
+          make -f Makefile.libretro clean
+          # 编译，新增PLATFORM参数指定unix，适配mipsel架构
+          make -f Makefile.libretro \
+            PLATFORM=unix \
+            ARCH=mipsel \
+            CROSS_COMPILE=${{ env.CROSS_COMPILE }} \
+            CC=${{ env.CC }} \
+            CXX=${{ env.CXX }} \
+            AR=${{ env.AR }} \
+            LD=${{ env.LD }} \
+            CFLAGS="${{ env.CFLAGS }}" \
+            CXXFLAGS="${{ env.CXXFLAGS }}" \
+            -j$(nproc)  # 多线程编译加速
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: pcsx_rearmed-gcw0-core
-          path: pcsx_rearmed/pcsx_rearmed_libretro.so  # 编译后的核心文件路径
-          retention-days: 30  # 产物保留30天
+          path: pcsx_rearmed/pcsx_rearmed_libretro.so
+          retention-days: 30
